# retro-urban-game

./: Cargo.toml  README.md
assets/config/: town.json
assets/kenney_animated-characters-3/: License.txt
crates/game-app/: Cargo.toml
crates/game-app/src/: lib.rs  player.rs  town.rs  vehicle.rs  zombie.rs
crates/map-editor/: Cargo.toml
crates/map-editor/src/: lib.rs
crates/map-schema/: Cargo.toml
crates/map-schema/src/: lib.rs
src/: collision.rs  error.rs  main.rs  player.rs  town.rs
