[package]
name = "retro-urban-game"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.6.0"
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
