[package]
name = "retro-urban-game"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "crates/game-app",
  "crates/map-editor",
  "crates/map-schema",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
game-app = { path = "crates/game-app" }
map-editor = { path = "crates/map-editor" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
